Let's git ignore the ORL faces dataset except its README

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# datasets
+Face_recognition_with_ORL/dataset/orl_faces/
+!Face_recognition_with_ORL/dataset/orl_faces/README
